--- a/index.html
+++ b/index.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/images/CVIcon.ico">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <title>Chinzorig Portfolio</title>
 </head>
+
 <header>
-    <ul>
+    <ul class="headerSpace">
         <li id="nameLogo">Chinzorig Boldmyagmar</li>
-        <li><a class="menuItems" href="contact.html">contact</a></li>
-        <div class="seperator"></div>
-        <li><a class="menuItems" href="portfolio.html">portfolio</a></li>
-        <div class="seperator"></div>
-        <li><a class="menuItems">about</a></li>
+        <li>
+            <a class="menuItems" href="contact.html">Contact</a>
+        </li>
+        <li class="seperator"></li>
+        <li>
+            <a class="menuItems" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="seperator"></li>
+        <li>
+            <a class="menuItems">About</a>
+        </li>
     </ul>
 </header>
-<body>    
-    <div id="wrapper">
-        <h2>About Me</h2>
+
+<body>
+
+    <div class="contentDiv">
+        <h2>| About Me |</h2>
         <hr>
-        <img src=/Users/ChinzorigBoldmyagmar/Desktop/bootcamp/Basic-Portfolio/assets/images/myportfoliopic.jpg alt="Chinzo" height=200 width=250>
-        <p>
-        Here is little about me I born in Mongolia but I grow up in Sacramento, CA. Im 30 years old, I have 2 kids and love them so much.  
-        </p>
-        <p>
 
+        <img id="aboutPic" src="assets/images/portfoliopicture.jpg" alt="portfolio" height=175 width=215>
+        <p class="paras">
+            Allow me to formally introduce myself to you: My name is Chinzorig/Chinzo and I am a man who is passionate about technology,
+            especially in robotics designing and coding is the first step towards my goal. Ever since I was kid, I watched
+            my grandfather work in the fields of electronic engineering. I enjoyed observing his work and I was so fascinated
+            about how technology can be imperative.
         </p>
-        <p>
-        
-        </p>        
+        <p class="paras">
+            Although I haven’t finished my studies in Electronic Engineering, I decided pursue my path in Coding. I await the opportunity
+            to pursue an education that allows me to acquire new skills.
+        </p>
+        <p class="paras">
+            I am father of two, husband of one.
+        </p>
     </div>
-        
-  
 
+    <footer>
+        <small>&copy; 2018, Chinzorig Boldmyagmar
+        </small>
+    </footer>
 </body>
-</html>
