--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 <body>
     <div class="contentDiv">
-        <h2>| Contact |</h2>
+        <h2 class ="contenttitle">| Contact |</h2>
         <hr>
         <p class="paras2">Name</p>
         <textarea cols="70" rows="1" placeholder="John Smith"></textarea>
