--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 <body>
 
     <div class="contentDiv">
-        <h2>| Portfolio |</h2>
+        <h2 class = "contenttitle">| Portfolio |</h2>
         <hr>
         <div class="clearfix">
             <ul class="projectList">
