--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
 <body>
 
     <div class="contentDiv">
-        <h2>| About Me |</h2>
+        <h2 class = "contenttitle" >| About Me |</h2>
         <hr>
 
-        <img id="aboutPic" src="assets/images/portfoliopicture.jpg" alt="portfolio" height=175 width=215>
+        <img id="aboutPic" src="assets/images/portfoliopicture.jpg" alt="portfolio" height=auto width=215>
         <p class="paras">
             Allow me to formally introduce myself to you: My name is Chinzorig/Chinzo and I am a man who is passionate about technology,
             especially in robotics designing and coding is the first step towards my goal. Ever since I was kid, I watched
             my grandfather work in the fields of electronic engineering. I enjoyed observing his work and I was so fascinated
             about how technology can be imperative.
         </p>
+       
         <p class="paras">
             Although I haven’t finished my studies in Electronic Engineering, I decided pursue my path in Coding. I await the opportunity
             to pursue an education that allows me to acquire new skills.
         </p>
+        
         <p class="paras">
             I am father of two, husband of one.
         </p>
