--- a/portfolio.html
+++ b/portfolio.html
@@ -34,17 +34,26 @@
         <div class="clearfix">
             <ul class="projectList">
                 <li class="itemBox">
-                    <img src="assets/images/matrix.jpg" alt="Project1" height=263 width=323>
+                    <a href="https://chinzokoo.github.io/Word-Guess-Game/">
+                    <img src="assets/images/matrix.jpg" alt="Project1" height=263 width=323></a>
                     <div class="label">Hangman</div>
                 </li>
                 <li class="itemBox">
-                    <img src="assets/images/rpg-games.jpg" alt="Project2" height=263 width=323>
+                    <a href="https://chinzokoo.github.io/unit-4-game/">
+                    <img src="assets/images/rpg-games.jpg" alt="Project2" height=263 width=323></a>
                     <div class="label">RPG Game</div>
                 </li>
                 <li class="itemBox">
-                    <img src="assets/images/triviagames.jpg" alt="Project3" height=263 width=323>
+                    <a href="https://chinzokoo.github.io/TriviaGame/">
+                    <img src="assets/images/triviagames.jpg" alt="Project3" height=263 width=323></a>
                     <div class="label">Trivia Game</div>
                 </li>
+            </li>
+            <li class="itemBox">
+                <a href="https://chinzokoo.github.io/Gif-Tastic/">
+                <img src="assets/images/lebron.jpg" alt="Project5" height=263 width=323></a>
+                <div class="label">Gif Tastic</div>
+            </li>
                 <li class="itemBox">
                     <img src="assets/images/siri-info-widget.jpg" alt="Project4" height=263 width=323>
                     <div class="label">Rutgers Info Widget</div>
